# crystal-copilot-clean

./: .env.example  .gitignore  .pre-commit-config.yaml  Compile-CrystalReports.ps1  Create-TestReport.ps1  Dockerfile.windows  Dockerfile.windows.backup  README.md  RptToXml.cs  WINDOWS_QUICKSTART.md  build-local-windows.ps1  cloudbuild.yaml  compile-crystal-simple.bat  compile-simple-gac.bat  compile-simple.bat  compile-windows-improved.bat  compile-windows.bat  compile-with-nuget.bat  compile-with-visual-studio.bat  create-test-rpt.md  debug-rpt-file.bat  diagnose-crystal-reports.bat  find-crystal-dlls.bat  fix-dependencies.bat  pyproject.toml  requirements.txt  setup-crystal-reports-step-by-step.bat  setup-windows-dev.ps1  setup-windows.bat  start-backend.bat  start-frontend.bat  windows-development-guide.md
.github/workflows/: build-windows-container.yml  build-windows-production.yml  deploy-production.yml
backend/: main.py
backend/core/: edit_service.py  qa_service.py  report_parser.py  report_renderer.py
backend/models/: report.py
backend/tests/: test_parser.py  test_qa_service.py
docs/: week2_summary.md
frontend/: app.py
sample_reports/: README.md
